# Argus_WebsiteDiagnosticPlatform

./: .commit-dummy-20260511230400  .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  ONBOARDING.md  PlantUML.md  Project_說明.md  README.md  SECURITY.md  audio_player.py  docker-compose.yml  pyproject.toml  requirements.txt  trafficlight_detection.py  yoloe_backend.py  使用說明.md  新網站報告.docx  開發計畫.md
.github/: PULL_REQUEST_TEMPLATE.md
DOC_專題文件/: 目錄說明大綱.md
Djude_Area/yollo_E/: .env.example  .gitignore  AGENTS.md  CHANGE_log.md  CLAUDE.md  DEPLOYMENT.md  README.md  UPDATE_LOG.md  WORK_LOG.md  pyproject.toml  使用說明.md  功能介紹與使用指南.md
Djude_Area/yollo_E/data/: custom_classes.json
Djude_Area/yollo_E/data/detection_logs/: detections_20260318.jsonl  detections_20260323.jsonl
Djude_Area/yollo_E/data/feedback/: feedback.jsonl
Djude_Area/yollo_E/data_backup_20260324/: AGENTS.md
Djude_Area/yollo_E/data_backup_20260324/database/: items.db
Djude_Area/yollo_E/data_backup_20260324/datasets/annotated/: .gitkeep
Djude_Area/yollo_E/docs/: INTEGRATION_PLAN.md
Djude_Area/yollo_E/docs/superpowers/specs/: 2026-03-24-webcam-web-integration-design.md
Djude_Area/yollo_E/models/: AGENTS.md
Djude_Area/yollo_E/scripts/: benchmark_visualization.py  benchmark_visualization_fixed.py  migrate_data.py  test_perf.py
Djude_Area/yollo_E/src/: AGENTS.md  __init__.py  config.py  main.py  web_server.py
Djude_Area/yollo_E/src/annotation/: models.py
Djude_Area/yollo_E/src/camera/: __init__.py  esp32_stream.py
Djude_Area/yollo_E/src/core/: __init__.py  data_manager.py  detection_engine.py
Djude_Area/yollo_E/src/database/: item_logger.py
Djude_Area/yollo_E/src/detection/: __init__.py  detection_logger.py  label_mapper.py  prompt_enhancer.py  yolo_detector.py
Djude_Area/yollo_E/src/static/: app.js  index.html  style.css
Djude_Area/yollo_E/src/training/: AGENTS.md  __init__.py  data_collector.py  train_custom.py
Djude_Area/yollo_E/src/utils/: AGENTS.md  visualization.py
Djude_Area/yollo_E/yollo_E/: camera_pins.h  yollo_E.ino
(+490 files in other folders)
