[project]
name = "argus"
version = "0.1.0"
description = "授權式 AI 網站健檢平台"
readme = "Project_說明.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.4,<6",
    "dj-database-url>=2.2,<3",
    "django>=5.0,<6",
    "django-cors-headers>=4.4,<5",
    "djangorestframework>=3.15,<4",
    "djangorestframework-simplejwt>=5.3,<6",
    "google-auth>=2.53.0",
    "pillow>=12.2.0",
    "playwright>=1.48,<2",
    "psycopg[binary]>=3.2,<4",
    "python-docx>=1.1,<2",
    "python-dotenv>=1.0,<2",
    "redis>=5.0,<6",
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "ruff>=0.8,<1",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["**/migrations/*.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
