[project]
name = "yollo-e"
version = "1.0.0"
description = "YOLO 日常物品辨識系統 - ESP32 串流 + 筆電運算"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    # YOLO 物件偵測
    "ultralytics>=8.3.0",
    
    # 影像處理
    "opencv-python>=4.9.0",
    "numpy>=1.26.0",
    "pillow>=10.0.0",  # 用於繪製中文文字
    
    # 資料庫
    "sqlalchemy>=2.0.0",
    
    # 環境變數
    "python-dotenv>=1.0.0",
    
    # HTTP 請求 (ESP32 串流)
    "requests>=2.31.0",
    
    # 日誌
    "loguru>=0.7.0",

    # 進度條
    "tqdm>=4.66.0",

    # 網頁伺服器
    "fastapi>=0.3.0",
    "uvicorn>=0.0.0",
    "websockets>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.2.0",
]

training = [
    # 資料標註相關
    "labelimg>=1.8.0",
    "roboflow>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]

[project.scripts]
yollo-detect = "src.main:main"
yollo-train = "src.training.train_custom:main"
yollo-collect = "src.training.data_collector:main"
